# myFEM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  WorkerLibraryWrapper.py  boundaryNodeTags.txt  boundaryNodeTagsFromGmsh.txt  main.py  test.py
include/: Boundary.h  Element.h  GaussIntegral.h  Material.h  Mesh.h  Serendipity.h  ThreadPool.h  Timer.h  vtkManager.h
python/: Analytical.py  Question2.py  Question3_1.py  Question3_2.py  Question4_1.py  Question4_2.py  lib  libraryWrapper.py  requirements.txt  test.py
src/: CMakeLists.txt  Element.cc  GaussIntegral.cc  Mesh.cc  Serendipity.cc  ThreadPool.cc  Timer.cc  cuSolve.cu  vtkManager.cc
test/: CMakeLists.txt  elementStiffnessMatrix.cc  meshTest.cc
work/: ApplyBoundary.cc  ApplyBoundary.h  CMakeLists.txt  E2.py  GenerateMesh.cc  GenerateMesh.cc.bak  GenerateMesh.h  GetStrainEnergy.cc  GetStrainEnergyChange.cc  GetStrainEnergyChange.h  GetStrainEngergy.h  PyWorker.cc  PyWorker.h  SetMaterial.cc  SetMaterial.h  main.cc  main.py  settings.toml  work.cc  work.h  worker.cc  worker.h
work/single/: CMakeLists.txt  GetStrainEnergyChange.cc  main.cc
work/singleton/: CMakeLists.txt  GetStrainEnergyChange.cc  main.cc  plot.py  settings.toml
